# searcher

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
docs/: PROP-001-modular-architecture.md  PROP-002-dynamic-capabilities.md  PROP-003-command-policy.md  PROP-004-cli-ux.md  PROP-005-core-models-usecases.md  PROP-006-llm-command-validation.md  PROP-007-minimum-command-usefulness.md  PROP-008-unicode-arguments-in-commands.md  PROP-009-numbered-command-selection.md  PROP-010-markdown-rendering-in-reasoning.md  PROP-011-default-reasoning-and-short-mode.md  PROP-012-dev-tools-capabilities.md  PROP-013-preferred-tools-flag.md  PROP-014-working-directory-context.md
searcher/: __init__.py  api.py  cli.py  command_policy.py  completion.py  config.py  prompts.py  tooling.py  types.py
searcher/core/: __init__.py  command_policy.py  completion.py  execution.py  http_client.py  prompts.py  tooling.py
searcher/models/: __init__.py  contracts.py
searcher/use_cases/: assistant.py  cli_runtime.py
tests/: test_main.py
