[project]
name = "searcher"
version = "0.1.0"
description = "CLI-помощник по консольным командам macOS через локальный API LM Studio"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
searcher = "searcher.cli:main"

[tool.mypy]
python_version = "3.14"
strict = true
files = ["main.py", "searcher"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
]
